# Lore_Games

./: GEMINI.md  LoreGames_first_successful_run.txt  README.md  ai_scratchpad.md  package-lock.json  pyproject.toml  src_bundle.txt
.state_dump/: agent_Alice_intent.md  agent_Alice_introspect.md  agent_Bob_intent.md  agent_Bob_introspect.md  environment_divination.md  environment_physics.md
.state_dump/Charlie/: Action.md  Intention.md  Introspection.md  Perspective.md
.state_dump/Delta/: Action.md  Intention.md  Introspection.md  Perspective.md
.state_dump/environment/: Divination.md  Reality.md
archived_content/: ## Analysis of First Simulation Run.md  base_callToGemini.py
archived_content/initial_design/: Lore_types.py
archived_content/turn_000/: Charlie_initial_perspective.md  Delta_initial_perspective.md
archived_content/turn_001/: Charlie_intention.md  Charlie_perspective.md  Delta_intention.md  Delta_perspective.md  environment_divination.md  reality.md
ext_docs/: fast-agent_docs_20250903.txt
ext_docs/textual_reference_app/: chat.tcss  chat_app.py
isolated_experimentation/: ai_handler.py  app.py  entities.py  main.py  not_main.py  prompts.py
src/: ai_handler.py  app.py  chronicle.py  config.py  entities.py  flows.py  lore_objects.py  lore_types.py  main.py  prompt_templates.py  prompts.py  state_logger.py  tui.py  tui.tcss
state_dump/turn_000/: Charlie_initial_perspective.md  Delta_initial_perspective.md
state_dump/turn_001/: Charlie_intention.md  reality.md  (+4 more)
tests/: test_app.py  test_chronicle.py  test_lore_types.py  test_simulation.py
(+42 files in other folders)
